<resources>
    <string name="app_name">MVVM2</string>
    <string name="preference_key">MOVIE_SEARCH</string>
    <string name="search_hint">검색어를 입력하세요</string>
    <string name="search">SEARCH</string>
    <string name="search_loading">검색 결과를 가져오는 중…</string>
    <string name="search_history">HISTORY</string>
    <string name="movie_poster">영화 포스터</string>
    <string name="movie_title">영화 제목</string>
    <string name="movie_rating">평점: 9.00</string>
    <string name="movie_director">영화 감독</string>
    <string name="movie_actor">영화 배우</string>
    <string name="search_empty">검색 결과가 존재하지 않습니다.</string>
    <string name="history_title">최근 검색어</string>
    <string name="history_none">최근 검색 기록이 존재하지 않습니다.</string>
    <string name="detail_fail">영화 상세 정보를 가져오지 못했습니다.</string>
</resources>