<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/movie_iv_poster"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:contentDescription="@string/movie_poster"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@color/black" />

    <TextView
        android:id="@+id/movie_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:ellipsize="end"
        app:layout_constraintBottom_toTopOf="@id/movie_tv_rating"
        app:layout_constraintStart_toEndOf="@id/movie_iv_poster"
        app:layout_constraintTop_toTopOf="@id/movie_iv_poster"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@string/movie_title" />

    <TextView
        android:id="@+id/movie_tv_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/movie_iv_poster"
        app:layout_constraintStart_toStartOf="@id/movie_tv_title"
        app:layout_constraintTop_toBottomOf="@id/movie_tv_title"
        tools:text="@string/movie_rating" />

</androidx.constraintlayout.widget.ConstraintLayout>