<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.mvvm2.viewmodel.MovieListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">

        <EditText
            android:id="@+id/main_et_search"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@null"
            android:hint="@string/search_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingHorizontal="10dp"
            app:layout_constraintBottom_toBottomOf="@id/main_btn_search"
            app:layout_constraintEnd_toStartOf="@id/main_btn_search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/main_btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:onClick="@{() -> viewModel.searchMovie(mainEtSearch.getText().toString())}"
            android:text="@string/search"
            app:layout_constraintEnd_toStartOf="@id/main_btn_history"
            app:layout_constraintStart_toEndOf="@id/main_et_search"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/main_btn_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:onClick="@{() -> viewModel.showHistory()}"
            android:text="@string/search_history"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/main_btn_search"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/main_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            app:layout_constraintTop_toBottomOf="@id/main_et_search" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/main_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingVertical="5dp"
            android:setItems="@{viewModel.movieList}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/main_line"
            tools:listitem="@layout/item_movie" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/search_empty"
            android:visibility="@{viewModel.tvVisibility ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_line" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>